fixed alignment and text

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -53,7 +53,7 @@
     .about-column {
         flex: auto;
         max-width: 100%;
-        padding: 15px;
+        margin: 15px;
     }
     .about-title {
         font-size: 32px;
