--- a/src/Components/HeroSection/HeroSection.css
+++ b/src/Components/HeroSection/HeroSection.css
@@ -31,13 +31,14 @@
 }
 
 .column {
-    flex: 0 0 50%;
-    max-width: 50%;
+    flex: 0 0 60%;
+    max-width: 60%;
     align-self: center;
 }
 
-.column.phone-column {
+.phone-column-1 {
     text-align: right;
+    max-width: 40%;
 }
 
 .phone-text {
@@ -50,6 +51,7 @@
 
 .stars {
     color: #fff;
+    margin-top: 4px;
 }
 
 .app-store {
@@ -96,7 +98,7 @@
         height: 300px;
     }
 
-    .column.phone-column {
+    .column.phone-column-1 {
         text-align: center;
     }
     
