--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -3,7 +3,7 @@
     height: 80px;
     background: transparent;
     display: flex; 
-    justify-content: center;
+    justify-content: start;
     align-items: center;
     position: sticky;
     top: 0;
@@ -12,6 +12,7 @@
     margin-top: -90px;
     margin-left: -15px;
     margin-right: -15px;
+    padding-left: 190px;
   }
 
   .navbar.active {
@@ -150,7 +151,7 @@
     .nav-links {
       text-align: center;
       /* padding: 2rem; */
-      padding: 0;
+      /* padding: 0; */
       width: 100%;
       display: flex;
       margin-left: 0;
@@ -161,7 +162,7 @@
     }
   
     .navbar-logo {
-      position: absolute;
+      position: fixed;
       top: 0;
       left: 0;
     }
@@ -171,9 +172,13 @@
       position: absolute;
       top: 0;
       right: 0;
-      transform: translate(-100%, 60%);
+      transform: translate(-100%, 40%);
       font-size: 1.8rem;
       cursor: pointer;
+    }
+
+    .menu-icon.active {
+      transform: translate(-100%, 40%);
     }
   
     .fa-times {
